# cubesolver

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/cubesolver/: axis.h  corner.h  cube.h  edge.h  piece.h  side.h  sticker.h  tile.h
src/: corner.cpp  cube.cpp  edge.cpp  piece.cpp  side.cpp  sticker.cpp  tile.cpp
